Remove less dependencies. Fixed header for good

--- a/source/less/header.less
+++ b/source/less/header.less
@@ -6,13 +6,16 @@
     .content-area();
     background-color:#c60b0b;
     height:8em;
+    h1 {
+        margin:0em;
+    }
     #dmp-brand {
       display:table-cell;
       vertical-align:middle;
       height:100%;
       h1 {
         text-transform:uppercase;
-        //letter-spacing:0.05em;
+        font-size:3.5em;
         text-align:left;
         padding-left:0.5em;
         a {
@@ -29,10 +32,14 @@
       vertical-align:middle;
       height:100%;
       h1 {
+        text-align:right;
         font-family:'IcoMoon';
         a {
           color:white;
           text-decoration:none;
+        }
+        a:last-child {
+            margin-right:1em;
         }
       }
     }
