--- a/source/less/author.less
+++ b/source/less/author.less
@@ -146,3 +146,19 @@
 .author-padding() {                       
   padding:0.2em 1em 0.2em 1em; 
 }
+
+.footer-author-card {
+	padding: 10px;
+	border: 1px solid #c0c0c0;
+	display:table;
+	width:97%;
+	img.avatar {
+		float:left;
+		padding-right:10px;
+		display:table-cell;
+	}
+	p {
+		display:table-cell;
+		vertical-align:middle;
+	}
+}
