--- a/source/less/footer.less
+++ b/source/less/footer.less
@@ -8,6 +8,9 @@
       color:@footer;
       p {
         margin:0em 0em 1em 0em;
+		a {
+			color: #D8D8D8;
+		}
       }
       h4 {
         .oswaldfont();
