--- a/source/less/post.less
+++ b/source/less/post.less
@@ -15,7 +15,13 @@
           .serif-font();
           color:@darkfont;
           margin:0.3em 0 0.3em 0;
+		  font-size:@header-font  - 0.7;
         }
+		h4 {
+		  font-size:@header-font - 0.9;
+		}
+
+
         section {
           border-top:0.1em @lightborder solid;
           border-bottom:0.1em @lightborder solid;
