add expiring banner to theme

--- a/source/css/style.css
+++ b/source/css/style.css
@@ -350,6 +350,7 @@
   border-left: 1px #d8e0e3 solid;
   padding-left: 0.5em;
   padding-right: 0.5em;
+  vertical-align: top;
 }
 #dmp-home-body #home-wrapper #side-content h2 {
   font-family: 'Oswald', sans-serif;
