--- a/source/css/style.css
+++ b/source/css/style.css
@@ -22,8 +22,9 @@
 }
 #dmp-header #dmp-header-wrapper #dmp-brand span {
   text-transform: uppercase;
-  font-size: 3.27em;
+  font-size: 4em;
   text-align: left;
+  margin-left: 40px;
 }
 #dmp-header #dmp-header-wrapper #dmp-brand span a {
   color: white;
