--- a/source/less/style.less
+++ b/source/less/style.less
@@ -171,3 +171,16 @@ h4 {
 	display:block;
 	margin:0 auto 0 auto;
 }
+
+::-webkit-scrollbar-thumb:vertical {
+background-color:#303030;
+height: 100px;
+}
+
+::-webkit-scrollbar-thumb:horizontal { background-color:#303030; }
+
+::-webkit-scrollbar { 
+background-color: #ffffff;
+height: 5px; 
+width: 10px; 
+}
