--- a/source/less/home.less
+++ b/source/less/home.less
@@ -31,6 +31,7 @@
     #announcement-container {
       display:table-cell;
       padding:0.5em 1em 0.5em 1em;
+      border-bottom: 1px solid #ccc;
       #annoucement-title {
         .oswaldfont();
         color:@redmotif;
